--- a/google/index.html
+++ b/google/index.html
@@ -45,14 +45,18 @@
             src="https://w7.pngwing.com/pngs/648/874/png-transparent-magnifying-glass-computer-icons-magnifying-glass-glass-desktop-wallpaper-circle.png"
           />
           <input class="input-search" />
-          <img
-            class="img-keyboard"
-            src="https://w7.pngwing.com/pngs/362/298/png-transparent-computer-keyboard-computer-icons-symbol-miscellaneous-text-computer-keyboard.png"
-          />
-          <img
-            class="img-mike"
-            src="https://cdn1.iconfinder.com/data/icons/google-s-logo/150/Google_Icons-25-512.png"
-          />
+          <div class="tooltip-wrapper">
+            <img
+              class="img-keyboard"
+              src="https://w7.pngwing.com/pngs/362/298/png-transparent-computer-keyboard-computer-icons-symbol-miscellaneous-text-computer-keyboard.png"
+            />
+          </div>
+          <div class="tooltip-mike">
+            <img
+              class="img-mike"
+              src="https://cdn1.iconfinder.com/data/icons/google-s-logo/150/Google_Icons-25-512.png"
+            />
+          </div>
           <img
             class="img-camera"
             src="https://t1.daumcdn.net/thumb/R720x0/?fname=http://t1.daumcdn.net/brunch/service/user/2uuw/image/Wspf7PS2jE4BcOB1XJg-c9hSvQs.jpg"
@@ -60,8 +64,8 @@
         </div>
         <div>
           <ul>
-            <li><button class="box1">google 검색</button></li>
-            <li><button class="box2">I'm Feeling Lucky</button></li>
+            <li><button class="box1">Google 검색</button></li>
+            <li><button class="box1">I'm Feeling Lucky</button></li>
           </ul>
         </div>
       </main>
